// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration given *no* configuration should set default options 1`] = `
Object {
  "atImportConf": Object {},
  "enableDebug": false,
  "enablePurge": true,
  "minify": true,
  "purgeExtractor": [Function],
  "purgeSafeList": Array [
    ":root",
    ":host",
    ":shadow",
    "/deep/",
    "::part",
    "::theme",
  ],
  "stripComments": false,
  "tailwindConf": Object {
    "darkMode": false,
    "mode": "jit",
    "plugins": Array [],
    "purge": Array [],
  },
  "tailwindCssContents": "@tailwind base;@tailwind utilities;@tailwind components;",
  "tailwindCssPath": undefined,
}
`;

exports[`configuration given configuration should set options 1`] = `
Object {
  "atImportConf": Object {},
  "enableDebug": true,
  "enablePurge": false,
  "minify": false,
  "purgeExtractor": [Function],
  "purgeSafeList": Array [
    "Im",
    "safe",
  ],
  "stripComments": true,
  "tailwindConf": Object {
    "darkMode": false,
    "mode": "jit",
    "plugins": Array [],
    "purge": Object {
      "content": Array [
        "./src/**/*.html",
        "./src/**/*.js",
        "./src/**/*.jsx",
        "./src/**/*.tsx",
      ],
      "enabled": true,
    },
    "theme": Object {
      "extend": Object {},
    },
    "variants": Object {
      "extend": Object {},
    },
  },
  "tailwindCssContents": "@tailwind base;
",
  "tailwindCssPath": "src/test/configuration/tailwindcss.css",
}
`;

exports[`configuration given configuration that does imports to another css file, should set options 1`] = `
Object {
  "atImportConf": Object {
    "path": Array [
      "src/test/configuration",
    ],
  },
  "enableDebug": false,
  "enablePurge": true,
  "minify": true,
  "purgeExtractor": [Function],
  "purgeSafeList": Array [
    ":root",
    ":host",
    ":shadow",
    "/deep/",
    "::part",
    "::theme",
  ],
  "stripComments": false,
  "tailwindConf": Object {
    "darkMode": false,
    "mode": "jit",
    "plugins": Array [],
    "purge": Array [],
  },
  "tailwindCssContents": "@import 'tailwindcss.css';
",
  "tailwindCssPath": "src/test/configuration/tailwind.atimport.css",
}
`;

exports[`configuration given configuration that does imports to another css file, should set options 2`] = `"/*! tailwindcss v2.2.9 | MIT License | https://tailwindcss.com*//*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */*,:after,:before{border:0 solid;box-sizing:border-box}"`;

exports[`configuration given modified default configuration should set default options 1`] = `
Object {
  "atImportConf": Object {},
  "enableDebug": false,
  "enablePurge": true,
  "minify": true,
  "purgeExtractor": [Function],
  "purgeSafeList": Array [
    ":root",
    ":host",
    ":shadow",
    "/deep/",
    "::part",
    "::theme",
  ],
  "stripComments": true,
  "tailwindConf": Object {
    "darkMode": false,
    "mode": "jit",
    "plugins": Array [],
    "purge": Array [],
  },
  "tailwindCssContents": "@tailwind base;@tailwind utilities;@tailwind components;",
  "tailwindCssPath": undefined,
}
`;
